--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  background: url('PR.jpg') no-repeat center center fixed #000;
+  background: url('PR7.jpg') no-repeat center center fixed #000;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
