--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
   <div class="container-fluid">
     <%= link_to 'PR Advisor', root_path, class:'heading navbar-brand'%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,10 +11,10 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
           <li class="nav-item">
-            <%= link_to 'Log In', root_path, class:'nav-link navall nav_border btn btn-outline-success'%>
+            <%= link_to 'Log In', root_path, class:'nav-link navall btn btn-outline-success'%>
           </li>
           <li class="nav-item">
-            <%= link_to 'Sign Up', root_path, class:'nav-link navall nav_border btn btn-outline-success'%>
+            <%= link_to 'Sign Up', root_path, class:'nav-link navall btn btn-outline-success'%>
           </li>
       </ul>
     </div>
